variables.RunHalf.scala.error
Compilation error:
RunHalf:16: error: ')' expected but '}' found.
	}
        ^